Se agregó otro componente de la página (cajitas) y su css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
   <main class="main-content">
+    <header>
+    <nav class="navegador">
+      <ul>
+        <li class="nav-item">
+          <a href="/cajitas.html">Cajitas</a>
+        </li>
+      </ul>
+    </nav>
+    </header>
     <h1 class="texto-custom espacioabajocustom">Mr. titulo</h1>
     <h1 class="texto-custom-dos">Mr. subtitulo</h1>
     <p id="identificador-parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum expedita a eum quae voluptates neque sunt iure earum, reiciendis eveniet quis nam rem quam ea similique debitis totam fuga magnam7!</p>
