Arreglé el error de visualización de css en github pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intro-CSS</title>
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <main class="main-content">
@@ -12,7 +12,7 @@
     <nav class="navegador">
       <ul>
         <li class="nav-item">
-          <a href="/cajitas.html">Cajitas</a>
+          <a href="./cajitas.html">Cajitas</a>
         </li>
       </ul>
     </nav>
