--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/d8df87160d.js" crossorigin="anonymous"></script>
     <script src="./sbux.js" defer></script>
     <link rel="stylesheet" href="./styles/header-starbucks.css">
+    <link rel="stylesheet" href="./styles/banners-starbucks.css">
 </head>
 <body>
     <header class="region region-header">
@@ -49,5 +50,197 @@
             </section>
         </section>
     </header>
+    <main>
+        <article class="fila">
+            <section class="bloque-banner tamaño-100 alinear texto-blanco fondo-verde-casa">
+                <section class="bloque-banner-imagen bloque-2-columna texto-centro">
+                    <article class="contenido-bloque">
+                        <figure class="imagen-bloque">
+                            <section class="campo campo-miniatura">
+                                <picture class="espacio">
+                                    <img
+                                    src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" 
+                                    alt="Starbucks Latte por ti">
+                                </picture>
+                            </section>
+                        </figure>
+                        <section class="bloque-texto">
+                            <article class="contenedor-interno">
+                                <header class="bloque-titulo">
+                                    <h2 class="titulo xl"><strong>STARBUCKS LATTE POR TI</strong></h2>
+                                </header>
+                                <section class="campo campo-resumen">
+                                    <p>Por nuestro amor al café, a nuestros partners y a nuestros clientes.</p>
+                                    <p>¡Estamos felices de verte todos los días!</p>
+                                </section>
+                            </article>
+                        </section>
+                    </article>
+                </section>
+            </section>
+        </article>
+        <article class="fila">
+            <section class="bloque-banner tamaño-100 alinear-derecha texto-blanco fondo-azul-fuerte">
+                <section class="bloque-banner-imagen bloque-2-columna texto-centro">
+                    <article class="contenido-bloque">
+                        <figure class="imagen-bloque">
+                            <section class="campo campo-miniatura">
+                                <picture class="espacio">
+                                    <img
+                                    src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FHOLIDAY_2024-Spooky.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" 
+                                    alt="Favoritos de la Temporada">
+                                </picture>
+                            </section>
+                        </figure>
+                        <section class="bloque-texto">
+                            <article class="contenedor-interno">
+                                <header class="bloque-titulo">
+                                    <h2 class="titulo xl"><strong>CELEBREMOS CON LOS FAVORITOS DE LA TEMPORADA</strong></h2>
+                                </header>
+                                <section class="campo campo-resumen">
+                                    <p>¡Disfruta esta temporada con el regreso de Cranberry Mocha Blanco acompañados de Toffee Nut latte, Red Velvet Latte, Hazelnut Caramel latte y Holiday Cinnamon!</p>
+                                </section>
+                            </article>
+                        </section>
+                    </article>
+                </section>
+            </section>
+        </article>
+        <article class="fila">
+            <section class="bloque-banner tamaño-100 alinear texto-blanco fondo-rojo-error">
+                <section class="bloque-banner-imagen bloque-2-columna texto-centro">
+                    <article class="contenido-bloque">
+                        <figure class="imagen-bloque">
+                            <section class="campo campo-miniatura">
+                                <picture class="espacio">
+                                    <img
+                                    src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FMerch.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" 
+                                    alt="El café perfecto para esta temporada">
+                                </picture>
+                            </section>
+                        </figure>
+                        <section class="bloque-texto">
+                            <article class="contenedor-interno">
+                                <header class="bloque-titulo">
+                                    <h2 class="titulo xl"><strong>EL CAFÉ PERFECTO PARA ESTA TEMPORADA</strong></h2>
+                                </header>
+                                <section class="campo campo-resumen">
+                                    <p>Una taza de café preparada con Christmas Blend es la excusa perfecta para disfrutar con tus seres queridos.</p>
+                                    <p>#StarbucksLatte</p>
+                                </section>
+                            </article>
+                        </section>
+                    </article>
+                </section>
+            </section>
+        </article>
+        <article class="fila">
+            <section class="bloque-banner tamaño-100 alinear-derecha texto-blanco fondo-verde-casa">
+                <section class="bloque-banner-imagen bloque-2-columna texto-centro">
+                    <article class="contenido-bloque">
+                        <figure class="imagen-bloque">
+                            <section class="campo campo-miniatura">
+                                <picture class="espacio">
+                                    <img
+                                    src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2Fstarbucks_rewards.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" 
+                                    alt="Recompensas en tu bebida favorita">
+                                </picture>
+                            </section>
+                        </figure>
+                        <section class="bloque-texto">
+                            <article class="contenedor-interno">
+                                <header class="bloque-titulo">
+                                    <h2 class="titulo xl"><strong>RECOMPENSAS EN TU BEBIDA FAVORITA</strong></h2>
+                                </header>
+                                <section class="campo campo-resumen">
+                                    <p>Sé parte de Starbucks Rewards y obtén más café gratis,
+                                    promociones exclusivas, accesos a productos antes que nadie y más.</p>
+                                </section>
+                            </article>
+                        </section>
+                    </article>
+                </section>
+            </section>
+        </article>
+        <article class="fila">
+            <section class="bloque-banner tamaño-100 alinear texto-blanco fondo-rojo-error">
+                <section class="bloque-banner-imagen bloque-2-columna texto-centro">
+                    <article class="contenido-bloque">
+                        <figure class="imagen-bloque">
+                            <section class="campo campo-miniatura">
+                                <picture class="espacio">
+                                    <img
+                                    src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_HOLIDAY_2024_Apple%20(1).png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" 
+                                    alt="Todo y Todos por el Planeta">
+                                </picture>
+                            </section>
+                        </figure>
+                        <section class="bloque-texto">
+                            <article class="contenedor-interno">
+                                <header class="bloque-titulo">
+                                    <h2 class="titulo xl"><strong>TODO Y TODOS POR EL PLANETA</strong></h2>
+                                </header>
+                                <section class="campo campo-resumen">
+                                    <p>Trae tu vaso o termo favorito y obtén $8 de descuento en tu bebida</p>
+                                </section>
+                            </article>
+                            <a href="https://www.starbucks.com.mx/articulo/todo-y-todos-por-el-planeta-0" class="boton">Conoce más</a>
+                        </section>
+                    </article>
+                </section>
+            </section>
+        </article>
+        <!-- Los siguientes bloques seguirían el mismo patrón de reducción de divs -->
+        <article class="fila">
+            <section class="envoltorio-bloque-banner">
+                <section class="bloque-banner tamaño-50 alinear-izquierda texto-rojo-error fondo-flor-cerezo">
+                    <section class="bloque-banner-imagen bloque-2-columna texto-centro">
+                        <article class="contenido-bloque">
+                            <figure class="imagen-bloque">
+                                <section class="campo campo-miniatura">
+                                    <picture class="espacio">
+                                        <img
+                                        src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FNoticias.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" 
+                                        alt="Noticias Starbucks">  
+                                    </picture>
+                                </section>
+                            </figure>
+                            <section class="bloque-texto">
+                                <article class="contenedor-interno">
+                                    <section class="campo campo-resumen">
+                                    <p>Consulta los eventos más recientes.</p>
+                                    </section>
+                                    <a href="https://www.starbucks.com.mx/seccion/boletines" id="banner-image-a71ef686-a21d-41d4-af0c-a301deaeffdb" class="boton">Aquí</a>
+                                </article>
+                            </section>
+                        </article>
+                    </section>
+                </section>
+                <section class="bloque-banner tamaño-50 alinear-izquierda texto-denim fondo-azul-cielo">
+                    <section class="bloque-banner-imagen bloque-2-columna texto-centro">
+                        <article class="contenido-bloque">
+                            <figure class="imagen-bloque">
+                                <section class="campo campo-miniatura">
+                                    <picture class="espacio">
+                                        <img
+                                        src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FTC.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" 
+                                        alt="Conoce nuestras Promociones">  
+                                    </picture>
+                                </section>
+                            </figure>
+                            <section class="bloque-texto">
+                                <article class="contenedor-interno">
+                                    <section class="campo campo-resumen">
+                                    <p>Términos y condiciones.</p>
+                                    </section>
+                                    <a href="https://www.starbucks.com.mx/seccion/terminos-y-condiciones" id="banner-image-d15567ad-6999-440d-b95e-71da635707f9" class="boton">Ver más</a>
+                                </article>
+                            </section>
+                        </article>
+                    </section>
+                </section>
+            </section>
+        </article>    
+    </main>
 </body>
 </html>
