Tercer avance del proyecto. Se añadió código HTML, CSS y JS de los footers

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./sbux.js" defer></script>
     <link rel="stylesheet" href="./styles/header-starbucks.css">
     <link rel="stylesheet" href="./styles/banners-starbucks.css">
+    <link rel="stylesheet" href="./styles/footer-starbucks.css">
 </head>
 <body>
     <header class="region region-header">
@@ -190,7 +191,6 @@
                 </section>
             </section>
         </article>
-        <!-- Los siguientes bloques seguirían el mismo patrón de reducción de divs -->
         <article class="fila">
             <section class="envoltorio-bloque-banner">
                 <section class="bloque-banner tamaño-50 alinear-izquierda texto-rojo-error fondo-flor-cerezo">
@@ -242,5 +242,79 @@
             </section>
         </article>    
     </main>
+    <footer class="region region-prefooter">
+        <section class="contenedor">
+            <section class="región región--prefooter">
+                <nav class="envoltorio-menu">
+                    <section class="bloque-menu bloque-menu-nosotros">
+                        <section data-accordion-component="Acordeón" class="acordeón">
+                            <section data-accordion-component="AcordeónElemento" class="acordeón__elemento">
+                                <header data-accordion-component="AcordeónElementoEncabezado" role="heading" class="acordeón__encabezado" aria-level="3">
+                                    <section class="acordeón__botón" id="acordeón__encabezado-menu_link_content:d25cd905-384c-438a-99c3-28d7577c755e" aria-disabled="false" aria-expanded="false" aria-controls="acordeón__panel-menu_link_content:d25cd905-384c-438a-99c3-28d7577c755e" role="button" tabindex="0">
+                                        <h3 class="display-sm texto-regular">Sobre Nosotros</h3>
+                                    </section>
+                                </header>
+                                <section data-accordion-component="AcordeónElementoPanel" class="acordeón__panel" id="acordeón__panel-menu_link_content:d25cd905-384c-438a-99c3-28d7577c755e" hidden="">
+                                    <ul class="display-xs">
+                                        <li><a href="/seccion/trabaja-con-nosotros" target="" class="">Trabaja con nosotros</a></li>
+                                        <li><a href="https://historias.starbucks.com/es/" target="_blank" class="">Historias Starbucks</a></li>
+                                    </ul>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                    <section class="bloque-menu bloque-menu-atencion">
+                        <section data-accordion-component="Acordeón" class="acordeón">
+                            <section data-accordion-component="AcordeónElemento" class="acordeón__elemento">
+                                <header data-accordion-component="AcordeónElementoEncabezado" role="heading" class="acordeón__encabezado" aria-level="3">
+                                    <section class="acordeón__botón" id="acordeón__encabezado-menu_link_content:d25cd905-384c-438a-99c3-28d7577c755e" aria-disabled="false" aria-expanded="false" aria-controls="acordeón__panel-menu_link_content:19ddd560-2e95-481f-beba-f20e1ecb291a" role="button" tabindex="0">
+                                        <h3 class="display-sm texto-regular">Atención al Cliente</h3>
+                                    </section>
+                                </header>
+                                <section data-accordion-component="AcordeónElementoPanel" class="acordeón__panel" id="acordeón__panel-menu_link_content:19ddd560-2e95-481f-beba-f20e1ecb291a" hidden="">
+                                    <ul class="display-xs">
+                                        <li><a href="https://rewards.starbucks.mx/atencion-cliente" target="" class="">Contáctanos</a></li>
+                                        <li><a href="https://alsea.interfactura.com/RegistroDocumento.aspx?opc=Starbucks" target="" class="">Facturas Electrónicas</a></li>
+                                        <li><a href="/seccion/experiencia-starbucks" target="" class="">Formas de Comprar</a></li>
+                                    </ul>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </nav>
+            </section>
+        </section>
+    </footer>
+    <footer class="region region-footer">
+        <div class="contenedor">
+            <div class="1-region region-footer-1">
+            <div class="bloque-redes-sociales">
+                <ul class="redes-sociales">
+                <li>
+                    <a class="icono-facebook" href="https://www.facebook.com/StarbucksMexico" target="_blank" rel="noreferrer">Facebook</a>
+                </li>
+                <li>
+                    <a class="icono-instagram" href="https://www.instagram.com/starbucksMex/" target="_blank" rel="noreferrer">Instagram</a>
+                </li>
+                <li>
+                    <a class="icono-twitter" href="https://twitter.com/StarbucksMex" target="_blank" rel="noreferrer">Twitter</a>
+                </li>
+                <li>
+                    <a class="icono-youtube" href="https://www.youtube.com/user/StarbucksMexico?app=desktop" target="_blank" rel="noreferrer">Youtube</a></li>
+            </ul>
+            </div>
+            <ul class="menu-legal">
+                <li><a href="/articulo/accesibilidad-web" class="item-menu">Accesibilidad Web</a></li>
+                <li><a href="/articulo/aviso-de-privacidad" class="item-menu">Aviso de Privacidad</a></li>
+                <li><a href="/seccion/boletines" class="item-menu">Boletines</a></li>
+                <li><a href="/articulo/condiciones-de-uso-1" class="item-menu">Condiciones de uso</a></li>
+                <li><a href="/articulo/mapa-del-sitio" class="item-menu">Mapa del sitio</a></li>
+                <li><a href="/articulo/preferencias-sobre-cookie" class="item-menu">Preferencias sobre cookies</a></li>
+            </ul>
+            <span class="copyright display-xxsmall">Ⓒ 2024. Starbucks Coffee Company. Reservados todos los derechos</span>
+            <span class="id-construccion display-xxsmall">mx | prod | 37c7fa28000666934de2111bcbafca3e92df535f | 29/11/2024-05:51:24:113</span>
+            </div>
+        </div>
+    </footer>    
 </body>
 </html>
