Avance de secciones extra: banner de cookies

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/header-starbucks.css">
     <link rel="stylesheet" href="./styles/banners-starbucks.css">
     <link rel="stylesheet" href="./styles/footer-starbucks.css">
+    <link rel="stylesheet" href="./styles/cookies-starbucks.css">
 </head>
 <body>
     <header class="region region-header">
@@ -36,13 +37,13 @@
                 <nav class="menu-principal">
                     <section class="bloque-menu menu-izquierda">
                         <ul>
-                            <li><a href="/menu" class="item-menu">Menu</a></li>
-                            <li><a href="https://rewards.starbucks.mx" target="_blank" class="item-menu">Rewards</a></li>
+                            <li><a href="https://www.starbucks.com.mx/menu" class="item-menu">Menu</a></li>
+                            <li><a href="https://rewards.starbucks.mx/" target="_blank" class="item-menu">Rewards</a></li>
                         </ul>
                     </section>
                     <section class="bloque-menu menu-derecha">
                         <ul class="menu-iniciar-registro">
-                            <li><a href="/stores" class="localizar-tienda boton">Localizar Tienda</a></li>
+                            <li><a href="https://www.starbucks.com.mx/stores" class="localizar-tienda boton">Localizar Tienda</a></li>
                             <li><a href="https://rewards.starbucks.mx/login" class="menu-iniciar boton">Ingresar</a></li>
                             <li><a href="https://rewards.starbucks.mx/register" class="menu-registrarse boton">Únete</a></li>
                         </ul>
@@ -315,6 +316,20 @@
             <span class="id-construccion display-xxsmall">mx | prod | 37c7fa28000666934de2111bcbafca3e92df535f | 29/11/2024-05:51:24:113</span>
             </div>
         </div>
-    </footer>    
+    </footer>
+    <div class="cookie-banner" id="cookieBanner">
+        <div class="banner-text-container">
+            <p class="banner-text-bold">
+            Este Sitio Usa Cookies
+            </p>
+            <span>
+            Al navegar en nuestro sitio aceptas que usemos cookies para personalizar tu experiencia según la Declaración de
+            Privacidad.
+            </span>
+        </div>
+        <div class="banner-button-container">
+            <button id="closeBannerButton" class="banner-button">Aceptar</button>
+        </div>
+    </div>
 </body>
 </html>
