Avance final, correcciones pequeñas y eliminación de notas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                     <span class="icon-close" style="display: none;">✖</span>
                 </label>
                 <input type="checkbox" id="menu-toggle" style="display: none;">
-                <!-- Barra lateral -->
                 <nav class="sidebar">
                     <ul>
                         <li><a href="/menu">Menu</a></li>
@@ -257,7 +256,7 @@
                                 </header>
                                 <section data-accordion-component="AcordeónElementoPanel" class="acordeón__panel" id="acordeón__panel-menu_link_content:d25cd905-384c-438a-99c3-28d7577c755e" hidden="">
                                     <ul class="display-xs">
-                                        <li><a href="/seccion/trabaja-con-nosotros" target="" class="">Trabaja con nosotros</a></li>
+                                        <li><a href="https://www.starbucks.com.mx/seccion/trabaja-con-nosotros" target="" class="">Trabaja con nosotros</a></li>
                                         <li><a href="https://historias.starbucks.com/es/" target="_blank" class="">Historias Starbucks</a></li>
                                     </ul>
                                 </section>
@@ -276,7 +275,7 @@
                                     <ul class="display-xs">
                                         <li><a href="https://rewards.starbucks.mx/atencion-cliente" target="" class="">Contáctanos</a></li>
                                         <li><a href="https://alsea.interfactura.com/RegistroDocumento.aspx?opc=Starbucks" target="" class="">Facturas Electrónicas</a></li>
-                                        <li><a href="/seccion/experiencia-starbucks" target="" class="">Formas de Comprar</a></li>
+                                        <li><a href="https://www.starbucks.com.mx/seccion/experiencia-starbucks" target="" class="">Formas de Comprar</a></li>
                                     </ul>
                                 </section>
                             </section>
@@ -305,12 +304,12 @@
             </ul>
             </div>
             <ul class="menu-legal">
-                <li><a href="/articulo/accesibilidad-web" class="item-menu">Accesibilidad Web</a></li>
-                <li><a href="/articulo/aviso-de-privacidad" class="item-menu">Aviso de Privacidad</a></li>
-                <li><a href="/seccion/boletines" class="item-menu">Boletines</a></li>
-                <li><a href="/articulo/condiciones-de-uso-1" class="item-menu">Condiciones de uso</a></li>
-                <li><a href="/articulo/mapa-del-sitio" class="item-menu">Mapa del sitio</a></li>
-                <li><a href="/articulo/preferencias-sobre-cookie" class="item-menu">Preferencias sobre cookies</a></li>
+                <li><a href="https://www.starbucks.com.mx/articulo/accesibilidad-web" class="item-menu">Accesibilidad Web</a></li>
+                <li><a href="https://www.starbucks.com.mx/articulo/aviso-de-privacidad" class="item-menu">Aviso de Privacidad</a></li>
+                <li><a href="https://www.starbucks.com.mx/seccion/boletines" class="item-menu">Boletines</a></li>
+                <li><a href="https://www.starbucks.com.mx/articulo/condiciones-de-uso-1" class="item-menu">Condiciones de uso</a></li>
+                <li><a href="https://www.starbucks.com.mx/articulo/mapa-del-sitio" class="item-menu">Mapa del sitio</a></li>
+                <li><a href="https://www.starbucks.com.mx/articulo/preferencias-sobre-cookie" class="item-menu">Preferencias sobre cookies</a></li>
             </ul>
             <span class="copyright display-xxsmall">Ⓒ 2024. Starbucks Coffee Company. Reservados todos los derechos</span>
             <span class="id-construccion display-xxsmall">mx | prod | 37c7fa28000666934de2111bcbafca3e92df535f | 29/11/2024-05:51:24:113</span>
